--- a/public/style.css
+++ b/public/style.css
@@ -50,9 +50,16 @@ body {
     margin: 0;
     border: 0;
     stroke: none;
-    height: 1em;
+    height: 0px;
     text-align: start;
+    padding: 0;
+    margin: 0;
     padding-left: 10px;
+    overflow:visible;
+}
+
+#chat_input_field:focus {
+    outline: none;
 }
 
 #chat_input_field::placeholder {
@@ -70,11 +77,9 @@ body {
     border-radius: 5px;
     border: solid 1px #a1a1a1;
     margin-left: 20px;
+    /* bottom: 0px; */
     width: 100%;
-}
-
-#chat_input_field:focus {
-    outline: none;
+    overflow:visible;
 }
 
 .form__frame {
@@ -145,13 +150,14 @@ body {
     flex-direction: column;
     overflow-y: auto;
     overflow-x: none;
+    width: 100%;
     gap: 0px;
     height: 90%;
 }
 
 .chat__msg__frame {
     position: relative;
-    width: calc(100% - 5px);
+    width: calc(100% - 20px);
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -178,7 +184,7 @@ body {
     gap: 5px;
     line-height: 1.5em;
     overflow-wrap: break-word;
-    width: 700px;
+    width: calc(100% - 5px);
     height: auto;
     /* letter-spacing: 0.5px; */
     margin-left: 5px;
